objects/chargebeeapps__CB_Quote_Product__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__Addon_Event__c</fullName>
        <label>Addon Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUBSCRIPTION_CREATION</fullName>
                    <label>On subscription creation</label>
                </value>
                <value>
                    <fullName>SUBSCRIPTION_TRIAL_START</fullName>
                    <label>On subscription trial start</label>
                </value>
                <value>
                    <fullName>PLAN_ACTIVATION</fullName>
                    <label>On plan activation</label>
                </value>
                <value>
                    <fullName>SUBSCRIPTION_ACTIVATION</fullName>
                    <label>On subscription activation</label>
                </value>
                <value>
                    <fullName>IMMEDIATELY</fullName>
                    <label>Immediately</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Apply_Charges__c</fullName>
        <label>Apply Charges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ONCE</fullName>
                    <label>Once</label>
                </value>
                <value>
                    <fullName>EVERYTIME</fullName>
                    <label>Everytime this event occurs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Billing_Cycles__c</fullName>
        <label>Billing Cycles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Quote__c</fullName>
        <label>CB Quote</label>
        <referenceTo>chargebeeapps__CB_Quote__c</referenceTo>
        <relationshipLabel>CB Quote Products</relationshipLabel>
        <relationshipName>CB_Quote_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CB Quote Products</relationshipLabel>
        <relationshipName>CB_Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Service_Period__c</fullName>
        <label>Service Period (days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__SetupFee__c</fullName>
        <label>SetupFee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__SubTotal__c</fullName>
        <formula>chargebeeapps__Quantity__c * chargebeeapps__UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CB Quote Product</label>
    <nameField>
        <label>CB Quote Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Quote Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>